<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chinchinapp.chinchin.ui.home.mvvm.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            android:background="@drawable/background_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/din_regular"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/text_enter_amount"/>

            <EditText
                mutableTextWatcher="@{viewModel.amountTextWatcher()}"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/md_dialog_frame_margin_vertical"
                android:fontFamily="@font/din_pro_light"
                android:gravity="center"
                android:hint="@string/text_hint"
                android:inputType="numberDecimal"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/CustomEditText"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/din_medium"
                android:textSize="16sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_select_coin"/>

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/rv_crypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>